--- a/bookandplay_admin/pubspec.yaml
+++ b/bookandplay_admin/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
   assets:
     - assets/data/canchas_test.json
     - assets/imagenes/fondo_login_medio.png
+    - assets/imagenes/fondologin_transp.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
