--- a/bookandplay_admin/pubspec.yaml
+++ b/bookandplay_admin/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
 
   change_app_package_name: ^1.5.0
   flutter_launcher_icons: ^0.14.4
+
+  internet_connection_checker_plus: ^2.7.2
+
   flutter:
     sdk: flutter
 
@@ -77,6 +80,7 @@ flutter:
   assets:
     - assets/data/canchas_test.json
     - assets/imagenes/fondologin_transp.png
+    - assets/iconos/no-internet1.gif
 
   # To add assets to your application, add an assets section, like this:
   # assets:
